# aiai-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.cursorrules/: diagram.mmd  how_to_communicate.mdc  overview.mdc
.github/workflows/: pypi-release.yml  tests.yaml
aiai/: .env.template  README.md  __init__.py  __main__.py  async_typer.py  crewai_agent.py  evals.py  langgraph_agent.py  log_ingestor.py  main.py  manage.py  openlit_exporters.py  prompt_finder.py  syn_data.py  test_main.py  utils.py
aiai/app/: apps.py  models.py  settings.py  tests.py
aiai/app/migrations/: 0001_initial.py  0002_agentrunlog_agent_run_id.py  0003_alter_agentrunlog_input_data_and_more.py  0004_alter_agentrunlog_success.py  0005_functioninfo.py  0006_rename_agentrunlog_otelspan_and_more.py  0007_datafileinfo_datafileanalysis_and_more.py  0007_discoveredrule_file_path_and_more.py  0007_syntheticdatum_syntheticeval_and_more.py  0007_syntheticdatum_syntheticeval_delete_discoveredrule.py  0008_alter_syntheticeval_kind.py  0008_discoveredrule_alter_syntheticeval_kind.py  0008_evalrun.py  0009_alter_evalrun_eval.py  0009_discoveredrule.py  0010_alter_evalrun_datum.py  0011_alter_evalrun_result_alter_evalrun_reward.py  0012_rename_datum_evalrun_input_data_and_more.py
aiai/cli/: README.md  app.py
aiai/cli/demo/: output_demo.md  output_user.md
aiai/code_analyzer/: __init__.py  analyzer.py  code_analyzer.py  data_file_analyzer.py  graph.py
aiai/code_analyzer/parsers/: __init__.py  base.py  python.py  typescript.py
aiai/code_analyzer/tests/: conftest.py  prompt_example.py  sample_code.py  sample_entrypoint.py  simple_test.py  test_analyzer.py  test_context_extraction.py  test_crewai_analysis.py  test_data_file_analyzer.py  test_data_file_tracking.py  test_project_analysis.py  test_save_in_db.py
aiai/db_app/: tests.py
aiai/db_app/migrations/: 0002_agentrunlog_agent_run_id.py  0004_alter_agentrunlog_success.py  0005_functioninfo.py
aiai/examples/: crewai_agent.py  example_custom_eval.py  langgraph_agent.py  openai_agent.py  prompt_finder.py
aiai/examples/config_file_examples/: agents.yaml
aiai/examples/crewai/: README.md  __init__.py  crew.py  entrypoint.py  optimizations_report_20250422_1558.md  people_data.json
aiai/examples/crewai_example/: entrypoint.py
aiai/examples/langgraph/: __init__.py  entrypoint.py  langgraph_agent.py
aiai/examples/langgraph_example/: entrypoint.py  langgraph_agent.py
aiai/llm_context/: overview.md
aiai/logger/: log_ingestor.py  openlit_exporters.py  runner.py  test_logger.py  test_runner.py
aiai/optimizer/: contextualizer.py  rule_extractor.py  rule_locator.py  rule_merger.py  test_rule_extractor.py
aiai/optimizer/tests/: test_rule_extractor.py  test_rule_locator.py  test_rule_merger.py
aiai/rule_locator/: rule_locator.py  test_rule_locator.py
aiai/runner/: __init__.py  batch_runner.py  otel_exporter.py  py_script_tracer.py  runner.py  script_tracer.py
aiai/runner/tests/: test_batch_runner.py  test_py_script_tracer.py  test_runner.py  test_script_tracer.py
aiai/synthesizer/: __init__.py  data.py  evals.py  utils.py
aiai/synthesizer/tests/: conftest.py  test_data.py  test_evals.py
aiai/synthetic/: data.py  e2e.py  evals.py  utils.py
aiai/synthetic/tests/: test_data.py  test_evals.py
aiai/tests/: test_main_cli.py
cli/: README.md
docs/: .vercelignore  build.sh  mkdocs.yml  package.json  requirements.txt  runtime.txt  vercel.json
docs/docs/: about.md  contributing.md  index.md
docs/docs/concepts/: agent-optimization.md  philosophy.md  rule-extraction.md
docs/docs/examples/: custom-agents.md  demo-email-agent.md
docs/docs/getting-started/: getting-started.md  installation.md  quick-start.md
docs/docs/stylesheets/: extra.css
docs/docs/user-guide/: commands.md  configuration-reference.md  configuration.md  overview.md
src/aiai/: __init__.py  crewai_agent.py  main.py  openlit_exporters.py  people_data.json
src/aiai/code_analyzer/: __init__.py  analyzer.py  graph.py  readme.md
src/aiai/code_analyzer/parsers/: __init__.py  base.py  python.py
src/aiai/code_analyzer/tests/: simple_test.py  test_analyzer.py  test_context_extraction.py  test_crewai_analysis.py  test_save_in_db.py
src/aiai/db_app/: apps.py  models.py
src/aiai/db_app/migrations/: 0003_alter_agentrunlog_input_data_and_more.py
src/aiai/examples/crewai/: crew.py  entrypoint.py
src/aiai/minimal_django/: settings.py
