[project]
name = "aiai-cli"
version = "0.1.11"
description = "Your friendly neighborhood AI agent optimization AI agent"
authors = [
    { name = "Amir Mehr", email = "amir@zenbase.ai" },
    { name = "Cyrus Nouroozi", email = "cyrus@zenbase.ai" }
]
dependencies = [
    "libcst>=1.7.0",
    "django>=5.2",
    "django-stubs>=5.1.3",
    "typer>=0.12.5",
    "openlit",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "networkx>=3.4.2",
    "pydot>=3.0.4",
    "python-dotenv>=1.1.0",
    "litellm==1.60.2",
    "instructor>=1.7.9",
    "pydantic>=2.11.3",
    "docetl>=0.2.2",
    "tqdm>=4.67.1",
    "aiolimiter>=1.2.1",
    "sorcery>=0.2.2",
    "pandas>=2.2.3",
    "pydash>=8.0.5",
    "scarf-sdk>=0.1.2",
    "aiai-cli[crewai]>=0.1.6",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
crewai = ["crewai==0.114.0", "crewai-tools"]
langgraph = ["langgraph>=0.3.31"]

[project.scripts]
aiai = "aiai.main:cli"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipdb>=0.13.13",
    "ipython>=9.1.0",
    "pytest-xdist>=3.6.1",
    "pytest-django>=4.11.1",
    "pytest>=8.3.5",
    "jupyter>=1.1.1",
    "ruff>=0.11.5",
    "pre-commit>=4.2.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "aiai.app.settings"
python_files = ["test_*.py", "*_test.py"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aiai"]

[tool.ruff]
# Enable the formatter
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

# Ignore line length errors for files that start with file_
[tool.ruff.lint.per-file-ignores]
"**/file_*.py" = ["E501"]
"aiai/app/migrations/*.py" = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
